# arena-90

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  SUBMISSION.md  skills-lock.json
.hallmark/: log.json  preflight.json
agents/zeroclaw/: run_clash.sh  zeroclaw.toml
agents/zeroclaw/tools/: read_odds.py
backend/arena-runtime/: .env.example  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
backend/arena-runtime/fixtures/: recorded-checkpoints.json  recorded-manifest.json
backend/arena-runtime/scripts/: acceptance-preflight.mjs  build-release.mjs  clean-build.mjs  export-replay-artifact.mjs  http-replay-smoke.mjs  http-server.mjs  lifecycle-replay-smoke.mjs  record-txline-recovery.mjs  record-txline-semifinals.mjs  txline-fixture-inspect.mjs  txline-smoke.mjs  zeroclaw-smoke.mjs  (+1 more)
backend/solana-actions/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
backend/solana-resolver/: .env.example  package-lock.json  package.json  tsconfig.json
contracts/anchor/arena_escrow/programs/arena_escrow/: Cargo.toml
contracts/anchor/arena_escrow/programs/arena_escrow/src/: constants.rs  error.rs  instructions.rs  lib.rs  settlement.rs  state.rs  txline.rs
contracts/anchor/arena_escrow/programs/arena_escrow/src/instructions/: deposit_to_kamino.rs  initialize_arena.rs  resolve_arena.rs  stake_agent.rs
contracts/anchor/arena_escrow/programs/arena_escrow/tests/: arena_escrow.rs
contracts/anchor/arena_escrow/programs/kamino_mock/: Cargo.toml
contracts/anchor/arena_escrow/programs/kamino_mock/src/: lib.rs
contracts/anchor/txline_cpi_probe/programs/txline_cpi_probe/: Cargo.toml
contracts/anchor/txline_cpi_probe/programs/txline_cpi_probe/src/: lib.rs
contracts/fixtures/: arena-identity-v1.json
docs/: README.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/demo/: 00-Demo-and-Submission-Runbook.md  01-Pitch-Team-Script.md
docs/prd/: Architecture-Audit.md  Phase-01-Setup.md  Phase-02-ZeroClaw.md  Phase-03-Blinks.md  Phase-04-Anchor.md  Phase-05-Frontend.md  Phase-05A-Frontend-Foundation.md  Phase-05B-Frontend-Sections.md  Phase-05C-Landing-Proof-Page.md  Phase-06-Anchor-Kamino.md  Phase-07-Payouts.md
docs/product/: 00-Product-Index.md  01-Autonomous-Game-Loop-Decision.md  02-Product-Definition-V2.md  03-User-Experience-and-Routes.md
docs/references/: anchor-basics.md  matt-pocock-skills-workflow.md  solana-actions.md  txline-world-cup-hackathon.md
docs/specs/: 01-P0-Arena-Runtime.md  02-V2-Delivery-Roadmap.md  03-TxLINE-Live-Data-Adapter.md  04-Supporter-Escrow-and-Blink-Settlement.md  05-TxLINE-Recovery-Replay.md
frontend/web/: .env.example  jest.config.mjs  jest.setup.js  package-lock.json  package.json
ops/deployment/: Caddyfile.example  README.md  arena90-runtime.service  arena90-solana-actions.service  arena90-solana-resolver.service  frontend.env.example  resolver.live.env.example  runtime.live.env.example  runtime.replay.env.example
(+254 files in other folders)
