[package]
name = "arena_escrow"
version = "0.1.0"
description = "Created with Anchor"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "arena_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.1.2"
anchor-spl = "1.1.2"

[dev-dependencies]
litesvm = "0.10.0"
solana-account = "3.4.0"
solana-message = "3.0.1"
solana-program-option = "3.1.0"
solana-program-pack = "3.1.0"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
spl-token-interface = "2.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
